--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,37 +27,37 @@ jobs:
           - name: v1.28
             version: v1.28.0
         tests:
-          - argo
-          - aws
-          - best-practices
-          - castai
-          - cert-manager
-          - consul
-          - external-secret-operator
-          - flux
-          - istio
-          - karpenter
-          - kasten
-          - kubecost
-          - kubeops
-          - kubevirt
-          - linkerd
-          - nginx-ingress
-          - openshift
-          - other/a
-          - other/b-d
-          - other/e-l
-          - other/m-q
-          - other/rec-req
-          - other/res
-          - other/s-z
-          - pod-security
-          - pod-security-cel
-          - psa
-          - psp-migration
-          # - tekton
-          # - traefik
-          # - velero
+          - ^argo$
+          - ^aws$
+          - ^best-practices$
+          - ^castai$
+          - ^cert-manager$
+          - ^consul$
+          - ^external-secret-operator$
+          - ^flux$
+          - ^istio$
+          - ^karpenter$
+          - ^kasten$
+          - ^kubecost$
+          - ^kubeops$
+          - ^kubevirt$
+          - ^linkerd$
+          - ^nginx-ingress$
+          - ^openshift$
+          - ^other$/^a
+          - ^other$/^[b-d]
+          - ^other$/^[e-l]
+          - ^other$/^[m-q]
+          - ^other$/^re[c-q]
+          - ^other$/^res
+          - ^other$/^[s-z]
+          - ^pod-security$
+          - ^pod-security-cel$
+          - ^psa$
+          - ^psp-migration$
+          # - ^tekton
+          # - ^traefik
+          # - ^velero
     runs-on: ubuntu-latest
     name: ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
     steps:
@@ -94,10 +94,10 @@ jobs:
       - name: Install Chainsaw
         uses: kyverno/chainsaw/.github/actions/install@5ca138ff5ad87bfb2c41e52cde8c00154756e4c5 # v0.0.7
         with:
-          release: v0.0.9-alpha.1
+          release: v0.0.9-alpha.3
       - name: Test with Chainsaw
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
-          chainsaw test --config .chainsaw.yaml --test-dir ./${{ matrix.tests }} --no-color=false
+          chainsaw test --config .chainsaw.yaml --include-test-regex '^chainsaw$/${{ matrix.tests }}' --no-color=false
