--- a/other/require-emptydir-requests-limits/require-emptydir-requests-limits.yaml
+++ b/other/require-emptydir-requests-limits/require-emptydir-requests-limits.yaml
@@ -6,9 +6,9 @@ metadata:
     policies.kyverno.io/title: Require Requests and Limits for emptyDir
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kyverno-version: 1.7.0
-    kyverno.io/kubernetes-version: "1.23"
+    policies.kyverno.io/minversion: 1.9.0
+    kyverno.io/kyverno-version: 1.11.1
+    kyverno.io/kubernetes-version: "1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Pods which mount emptyDir volumes may be allowed to potentially overrun
@@ -18,7 +18,7 @@ metadata:
       the volume has already a sizeLimit set.
 spec:
   background: false
-  validationFailureAction: audit
+  validationFailureAction: Audit
   rules:
     - name: check-emptydir-requests-limits
       match:
@@ -26,9 +26,13 @@ spec:
           - resources:
               kinds:
                 - Pod
+      context:
+      - name: emptydirnames
+        variable:
+          jmesPath: request.object.spec.volumes[?contains(keys(@), 'emptyDir') && !contains(keys(emptyDir), 'sizeLimit')].name
       preconditions:
         all:
-          - key: "{{ request.object.spec.volumes[?contains(keys(@), 'emptyDir')] || '' | length(@) }}"
+          - key: "{{ request.object.spec.volumes[?contains(keys(@), 'emptyDir')] || `[]` | length(@) }}"
             operator: GreaterThanOrEquals
             value: 1
           - key: "{{request.operation || 'BACKGROUND'}}"
@@ -39,19 +43,15 @@ spec:
       validate:
         message: Containers mounting emptyDir volumes must specify requests and limits for ephemeral-storage.
         foreach:
-          - list: "request.object.spec.volumes[?contains(keys(@), 'emptyDir') && !contains(keys(emptyDir), 'sizeLimit')]"
-            elementScope: false
-            deny:
-              conditions:
-                any:
-                  # get the number of containers (based on name) which mount this emptyDir (by name)
-                  - key: "{{request.object.spec.[initContainers, containers][].volumeMounts[?name == '{{ element.name }}' ][].name | length(@) }}"
-                    operator: NotEquals
-                    # compare it to the number of containers (also mounting this same emptyDir vol by name) which have ephemeral-storage requests.
-                    # block if the two numbers aren't equal. If limits are specified but not requests, requests are automatically
-                    # set equal to the value of the limit. Therefore, this condition only works effectively if both requests and limits are not set.
-                    value: '{{request.object.spec.[initContainers, containers[?volumeMounts[?name == ''{{element.name}}'' ]]][].resources.requests."ephemeral-storage" | length(@) }}'
-                  - key: "{{request.object.spec.[initContainers, containers][].volumeMounts[?name == '{{ element.name }}' ][].name | length(@) }}"
-                    operator: NotEquals
-                    # same as above but with limits
-                    value: '{{request.object.spec.[initContainers, containers[?volumeMounts[?name == ''{{element.name}}'' ]]][].resources.limits."ephemeral-storage" | length(@) }}'
+          - list: "request.object.spec.[initContainers, containers][]"
+            preconditions:
+              any:
+              - key: "{{ element.volumeMounts[].name }}"
+                operator: AnyIn
+                value: "{{ emptydirnames }}"
+            pattern:
+              resources:
+                requests:
+                  ephemeral-storage: "?*"
+                limits:
+                  ephemeral-storage: "?*"
