--- a/pod-security-cel/baseline/disallow-host-ports-range/disallow-host-ports-range.yaml
+++ b/pod-security-cel/baseline/disallow-host-ports-range/disallow-host-ports-range.yaml
@@ -12,7 +12,8 @@ metadata:
     policies.kyverno.io/description: >-
       Access to host ports allows potential snooping of network traffic and should not be
       allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
-      field is set to one in the designated list. 
+      field is set to one in the designated list. Note that Kubernetes Pod Security Admission
+      does not support this rule.
 spec:
   validationFailureAction: Audit
   background: true
