--- a/best-practices/disallow-cri-sock-mount/.chainsaw-test/pod-containerd-sock.yaml
+++ b/best-practices/disallow-cri-sock-mount/.chainsaw-test/pod-containerd-sock.yaml
@@ -12,4 +12,4 @@ spec:
   volumes:
   - name: dockersock
     hostPath:
-      path: /var/run/containerd.sock
+      path: /var/run/containerd/containerd.sock
