--- a/cleanup/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
+++ b/cleanup/cleanup-empty-replicasets/cleanup-empty-replicasets.yaml
@@ -11,7 +11,12 @@ metadata:
     policies.kyverno.io/minversion: 1.9.0
     kyverno.io/kubernetes-version: "1.27"
     policies.kyverno.io/description: >-
-      ReplicaSets are an intermediary controller to several Pod controllers such as Deployments. When a new version of a Deployment is created, it spawns a new ReplicaSet with the desired number of replicas and scale the current one to zero. This can have the effect of leaving many empty ReplicaSets in the cluster which can create clutter and false positives if policy reports are enabled. This cleanup policy removes all empty ReplicaSets across the cluster. Note that removing empty ReplicaSets may prevent rollbacks.
+      ReplicaSets are an intermediary controller to several Pod controllers such as Deployments.
+      When a new version of a Deployment is created, it spawns a new ReplicaSet with the desired
+      number of replicas and scale the current one to zero. This can have the effect of leaving
+      many empty ReplicaSets in the cluster which can create clutter and false positives if policy
+      reports are enabled. This cleanup policy removes all empty ReplicaSets across the cluster.
+      Note that removing empty ReplicaSets may prevent rollbacks.
 spec:
   match:
     any:
