--- a/other/require-imagepullsecrets/.chainsaw-test/pod-good.yaml
+++ b/other/require-imagepullsecrets/.chainsaw-test/pod-good.yaml
@@ -16,7 +16,7 @@ metadata:
 spec:
   containers:
   - name: nginx
-    image: ghcr.io/nginx:1.12
+    image: ghcr.io/kyverno/test-verify-image:unsigned
 ---
 apiVersion: v1
 kind: Pod
@@ -25,7 +25,7 @@ metadata:
 spec:
   containers:
   - name: nginx
-    image: ghcr.io/nginx:1.12
+    image: ghcr.io/kyverno/test-verify-image:unsigned
   - name: busybox
     image: busybox:1.35
   imagePullSecrets:
