--- a/other/require-imagepullsecrets/.chainsaw-test/podcontroller-good.yaml
+++ b/other/require-imagepullsecrets/.chainsaw-test/podcontroller-good.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: ghcr.io/nginx:1.12
+        image: ghcr.io/kyverno/test-verify-image:unsigned
       - name: busybox
         image: busybox:1.35
       imagePullSecrets:
@@ -35,7 +35,7 @@ spec:
         spec:
           containers:
           - name: nginx
-            image: ghcr.io/nginx:1.12
+            image: ghcr.io/kyverno/test-verify-image:unsigned
           - name: busybox
             image: busybox:1.35
           imagePullSecrets:
