--- a/other/require-imagepullsecrets/.chainsaw-test/podcontroller-bad.yaml
+++ b/other/require-imagepullsecrets/.chainsaw-test/podcontroller-bad.yaml
@@ -19,7 +19,7 @@ spec:
       - name: busybox
         image: busybox:1.35
       - name: nginx
-        image: ghcr.io/nginx:1.12
+        image: ghcr.io/kyverno/test-verify-image:unsigned
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -33,7 +33,7 @@ spec:
         spec:
           containers:
           - name: nginx
-            image: ghcr.io/nginx:1.12
+            image: ghcr.io/kyverno/test-verify-image:unsigned
           - name: busybox
             image: busybox:1.35
           restartPolicy: OnFailure
