--- a/other/require-image-source/.chainsaw-test/podcontroller-bad.yaml
+++ b/other/require-image-source/.chainsaw-test/podcontroller-bad.yaml
@@ -18,8 +18,8 @@ spec:
       containers:
       - name: annotations
         image: ghcr.io/kyverno/kyverno-annotations-example:latest
-      - name: busybox
-        image: busybox:1.35
+      - name: test-verify-image
+        image: ghcr.io/kyverno/test-verify-image:unsigned
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -32,8 +32,8 @@ spec:
       template:
         spec:
           containers:
-          - name: busybox
-            image: busybox:1.35
+          - name: test-verify-image
+            image: ghcr.io/kyverno/test-verify-image:unsigned
           - name: annotations
             image: ghcr.io/kyverno/kyverno-annotations-example:latest
           restartPolicy: OnFailure
