changed other to Other
Signed-off-by: swastik959 <Sswastik959@gmail.com>

--- a/.github/ISSUE_TEMPLATE/sample_policy.yml
+++ b/.github/ISSUE_TEMPLATE/sample_policy.yml
@@ -44,7 +44,7 @@ body:
         YAML syntax highlighting will be applied automatically.
       render: yaml
   - type: textarea
-    id: other
+    id: Other
     attributes:
       label: Other Comments
       description: Provide any other comments.
