--- a/other/cordon-and-drain-node/cordon-and-drain-node.yaml
+++ b/other/cordon-and-drain-node/cordon-and-drain-node.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cordon-and-drain-node
   annotations:
     policies.kyverno.io/title: Cordon and Drain Node
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/subject: Node
     kyverno.io/kyverno-version: 1.10.1
     policies.kyverno.io/minversion: 1.10.0
