--- a/other/generate-networkpolicy-existing/generate-networkpolicy-existing.yaml
+++ b/other/generate-networkpolicy-existing/generate-networkpolicy-existing.yaml
@@ -4,7 +4,7 @@ metadata:
   name: generate-networkpolicy-existing
   annotations:
     policies.kyverno.io/title: Generate NetworkPolicy to Existing Namespaces
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Namespace, NetworkPolicy
     kyverno.io/kyverno-version: 1.7.0
