--- a/other/add-certificates-volume/.chainsaw-test/pod-not-patched.yaml
+++ b/other/add-certificates-volume/.chainsaw-test/pod-not-patched.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     inject-certs: disabled
   name: pod02
-  namespace: other-certvol-ns
+  namespace: Other-certvol-ns
 spec:
   containers:
   - name: pod02-01
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod03
-  namespace: other-certvol-ns
+  namespace: Other-certvol-ns
 spec:
   automountServiceAccountToken: false
   containers:
@@ -51,7 +51,7 @@ metadata:
   annotations:
     foo: bar
   name: pod04
-  namespace: other-certvol-ns
+  namespace: Other-certvol-ns
 spec:
   automountServiceAccountToken: false
   containers:
