--- a/other/add-certificates-volume/.chainsaw-test/pod-resources.yaml
+++ b/other/add-certificates-volume/.chainsaw-test/pod-resources.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     inject-certs: enabled
   name: pod01
-  namespace: other-certvol-ns
+  namespace: Other-certvol-ns
 spec:
   automountServiceAccountToken: false
   containers:
@@ -19,7 +19,7 @@ metadata:
   annotations:
     inject-certs: disabled
   name: pod02
-  namespace: other-certvol-ns
+  namespace: Other-certvol-ns
 spec:
   automountServiceAccountToken: false
   containers:
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod03
-  namespace: other-certvol-ns
+  namespace: Other-certvol-ns
 spec:
   automountServiceAccountToken: false
   containers:
@@ -47,7 +47,7 @@ metadata:
   annotations:
     foo: bar
   name: pod04
-  namespace: other-certvol-ns
+  namespace: Other-certvol-ns
 spec:
   automountServiceAccountToken: false
   containers:
