--- a/other/block-cluster-admin-from-ns/block-cluster-admin-from-ns.yaml
+++ b/other/block-cluster-admin-from-ns/block-cluster-admin-from-ns.yaml
@@ -4,7 +4,7 @@ metadata:
   name: block-cluster-admin-from-ns
   annotations:
     policies.kyverno.io/title: Block a Cluster Admin/s from CREATE/UPDATE/DELETE any object in a Namespace
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/subject: Namespace, ClusterRole, User 
     policies.kyverno.io/minversion: 1.9.0
     policies.kyverno.io/description: >-
