--- a/other/concatenate-configmaps/concatenate-configmaps.yaml
+++ b/other/concatenate-configmaps/concatenate-configmaps.yaml
@@ -4,7 +4,7 @@ metadata:
   name: concatenate-configmaps
   annotations:
     policies.kyverno.io/title: Concatenate ConfigMaps
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: ConfigMap
     kyverno.io/kyverno-version: 1.7.0
