--- a/other/label-nodes-cri/label-nodes-cri.yaml
+++ b/other/label-nodes-cri/label-nodes-cri.yaml
@@ -4,7 +4,7 @@ metadata:
   name: label-nodes-cri
   annotations:
     policies.kyverno.io/title: Label Nodes with CRI Runtime
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Node, Label
     kyverno.io/kyverno-version: 1.7.2
