--- a/other/restart-deployment-on-secret-change/restart-deployment-on-secret-change.yaml
+++ b/other/restart-deployment-on-secret-change/restart-deployment-on-secret-change.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restart-deployment-on-secret-change
   annotations:
     policies.kyverno.io/title: Restart Deployment On Secret Change
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Deployment
     kyverno.io/kyverno-version: 1.7.0
