--- a/other/scale-deployment-zero/scale-deployment-zero.yaml
+++ b/other/scale-deployment-zero/scale-deployment-zero.yaml
@@ -4,7 +4,7 @@ metadata:
   name: scale-deployment-zero
   annotations:
     policies.kyverno.io/title: Scale Deployment to Zero
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Deployment
     kyverno.io/kyverno-version: 1.7.0
