--- a/other/update-image-tag/update-image-tag.yaml
+++ b/other/update-image-tag/update-image-tag.yaml
@@ -4,7 +4,7 @@ metadata:
   name: update-image-tag
   annotations:
     policies.kyverno.io/title: Update Image Tag
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Deployment
     kyverno.io/kyverno-version: 1.7.0
