--- a/other/verify-manifest-integrity/verify-manifest-integrity.yaml
+++ b/other/verify-manifest-integrity/verify-manifest-integrity.yaml
@@ -4,7 +4,7 @@ metadata:
   name: verify-manifest-integrity
   annotations:
     policies.kyverno.io/title: Verify Manifest Integrity
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Deployment
     kyverno.io/kyverno-version: 1.8.0
