--- a/other/add-certificates-volume/.chainsaw-test/podcontroller-not-patched.yaml
+++ b/other/add-certificates-volume/.chainsaw-test/podcontroller-not-patched.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: busybox
   name: deployment02
-  namespace: Other-certvol-ns
+  namespace: other-certvol-ns
 spec:
   replicas: 1
   selector:
@@ -40,7 +40,7 @@ metadata:
   labels:
     app: busybox
   name: deployment03
-  namespace: Other-certvol-ns
+  namespace: other-certvol-ns
 spec:
   replicas: 1
   selector:
