--- a/other/add-certificates-volume/.chainsaw-test/podcontroller-resources.yaml
+++ b/other/add-certificates-volume/.chainsaw-test/podcontroller-resources.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: busybox
   name: deployment01
-  namespace: Other-certvol-ns
+  namespace: other-certvol-ns
 spec:
   replicas: 1
   selector:
@@ -31,7 +31,7 @@ metadata:
   labels:
     app: busybox
   name: deployment02
-  namespace: Other-certvol-ns
+  namespace: other-certvol-ns
 spec:
   replicas: 1
   selector:
@@ -58,7 +58,7 @@ metadata:
   labels:
     app: busybox
   name: deployment03
-  namespace: Other-certvol-ns
+  namespace: other-certvol-ns
 spec:
   replicas: 1
   selector:
