--- a/other/add-pod-priorityclassname/.kyverno-test/patchedResource.yaml
+++ b/other/add-pod-priorityclassname/.kyverno-test/patchedResource.yaml
@@ -1,10 +1,21 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: blank
   namespace: foo
+  labels:
+    app: blank
 spec:
-  containers:
-  - name: busybox
-    image: sfsdafasdfsadfsadf
-  priorityClassName: non-production
+  replicas: 1
+  selector:
+    matchLabels:
+      app: blank
+  template:
+    metadata:
+      labels:
+        app: blank
+    spec:
+      containers:
+      - image: sfsdafasdfsadfsadf
+        name: busybox
+      priorityClassName: non-production
