--- a/other/add-pod-priorityclassname/.kyverno-test/resource.yaml
+++ b/other/add-pod-priorityclassname/.kyverno-test/resource.yaml
@@ -1,19 +1,41 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: blank
   namespace: foo
+  labels:
+    app: blank
 spec:
-  containers:
-  - name: busybox
-    image: sfsdafasdfsadfsadf
+  replicas: 1
+  selector:
+    matchLabels:
+      app: blank
+  template:
+    metadata:
+      labels:
+        app: blank
+    spec:
+      containers:
+      - image: sfsdafasdfsadfsadf
+        name: busybox
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: second
   namespace: production
+  labels:
+    app: second
 spec:
-  containers:
-  - name: busybox
-    image: sfsdafasdfsadfsadf
+  replicas: 1
+  selector:
+    matchLabels:
+      app: second
+  template:
+    metadata:
+      labels:
+        app: second
+    spec:
+      containers:
+      - image: sfsdafasdfsadfsadf
+        name: busybox
