--- a/pod-security/baseline/disallow-host-ports-range/.chainsaw-test/pod-bad.yaml
+++ b/pod-security/baseline/disallow-host-ports-range/.chainsaw-test/pod-bad.yaml
@@ -7,7 +7,8 @@ spec:
   - name: init
     image: busybox:1.35
     ports:
-    - hostPort: 8090
+    - containerPort: 1234
+      hostPort: 8090
   containers:
   - name: busybox
     image: busybox:1.35
