--- a/pod-security/baseline/disallow-host-ports-range/disallow-host-ports-range.yaml
+++ b/pod-security/baseline/disallow-host-ports-range/disallow-host-ports-range.yaml
@@ -12,9 +12,10 @@ metadata:
     kyverno.io/kubernetes-version: "1.22-1.23"
     policies.kyverno.io/description: >-
       Access to host ports allows potential snooping of network traffic and should not be
-      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
-      field is set to one in the designated list. Note that Kubernetes Pod Security Admission
-      does not support this rule.
+      allowed by requiring host ports be undefined (recommended) or at minimum restricted to a known list.
+      This policy ensures the `hostPort` field, if defined, is set to either a port in the specified range
+      or to a value of zero. This policy is mutually exclusive of the disallow-host-ports policy.
+      Note that Kubernetes Pod Security Admission does not support the host port range rule.
 spec:
   validationFailureAction: audit
   background: true
@@ -25,12 +26,21 @@ spec:
         - resources:
             kinds:
               - Pod
+      preconditions:
+        all:
+        - key: "{{ request.operation }}"
+          operator: NotEquals
+          value: DELETE
       validate:
         message: >-
-          The only permitted hostPorts are in the range 5000-6000.
+          The only permitted hostPorts are in the range 5000-6000 or 0.
         deny:
           conditions:
             all:
             - key: "{{ request.object.spec.[ephemeralContainers, initContainers, containers][].ports[].hostPort }}"
               operator: AnyNotIn
               value: 5000-6000
+            - key: "{{ request.object.spec.[ephemeralContainers, initContainers, containers][].ports[].hostPort }}"
+              operator: AnyNotIn
+              value:
+              - 0
