--- a/other/apply-pss-restricted-profile/apply-pss-restricted-profile.yaml
+++ b/other/apply-pss-restricted-profile/apply-pss-restricted-profile.yaml
@@ -14,7 +14,9 @@ metadata:
       these are typically validation policies, workloads will either be accepted or
       rejected based upon what has already been defined. It is also possible to mutate
       incoming Pods to achieve the desired PSS level rather than reject. This policy
-      sets all the fields necessary to pass the PSS Restricted profile.
+      sets all the fields necessary to pass the PSS Restricted profile. Note that it does
+      not attempt to remove non-compliant volumes and volumeMounts. Additional policies
+      may be employed for this purpose.
 spec:
   rules:
   - name: add-pss-fields
