rename to prevent-bare-pods
Signed-off-by: chipzoller <chipzoller@gmail.com>

--- a/other/prevent-naked-pods/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+++ b/other/prevent-naked-pods/.chainsaw-test/chainsaw-step-01-assert-1.yaml
@@ -1,6 +1,6 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: prevent-naked-pods
+  name: prevent-bare-pods
 status:
   ready: true
