--- a/other/prevent-naked-pods/.chainsaw-test/chainsaw-test.yaml
+++ b/other/prevent-naked-pods/.chainsaw-test/chainsaw-test.yaml
@@ -11,7 +11,7 @@ spec:
         file: ns.yaml
     - script:
         content: |
-          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../prevent-naked-pods.yaml | kubectl create -f -
+          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../prevent-bare-pods.yaml | kubectl create -f -
     - assert:
         file: chainsaw-step-01-assert-1.yaml
   - name: step-02
