--- a/other/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
+++ b/other/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
@@ -40,7 +40,7 @@ spec:
         ref:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
-          name: prevent-naked-pods
+          name: prevent-bare-pods
     - command:
         args:
         - delete
