--- a/other/enforce-readwriteonce-pod/enforce-readwriteonce-pod.yml
+++ b/other/enforce-readwriteonce-pod/enforce-readwriteonce-pod.yml
@@ -1,31 +1,33 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: ReadWriteOnce-Pod
+  name: readwriteOnce-pod
   annotations:
     policies.kyverno.io/title: Enforce ReadWriteOncePod
     policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: PersistentVolumeClaim
     policies.kyverno.io/description: >-
-      This validation is valuable when the persistent volumes should be
-      accessed by one single pod it can be useful in an environment where
-      the volumes should be restrictive and should be accessed by only handfull
+      Some stateful workloads with multiple replicas only allow a single Pod to write
+      to a given volume at a time. Beginning in Kubernetes 1.22 and enabled by default
+      in 1.27, a new setting called ReadWriteOncePod, available
+      for CSI volumes only, allows volumes to be writable from only a single Pod. For more
+      information see the blog https://kubernetes.io/blog/2023/04/20/read-write-once-pod-access-mode-beta/.
+      This policy enforces that the accessModes for a PersistentVolumeClaim be set to ReadWriteOncePod.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
-  - name: ReadWriteOnce-Pod
+  - name: readwrite-pvc-single-pod
     match:
       any:
       - resources:
           kinds:
           - PersistentVolumeClaim
     validate:
-      message: "access mode of persistent volume claims not set to ReadWriteOncePod"
-      deny:
-        conditions:
-          any:
-          - key: "{{ request.object.spec.accessModes }}"
-            operator: NotEquals
-            value: ReadWriteOncePod
+      message: "The accessMode must be set to ReadWriteOncePod."
+      pattern:
+        spec:
+          accessModes:
+          - ReadWriteOncePod
+
+          
