Misc policy fixes (#872)
* update add--pod-priorityclassname

Signed-off-by: chipzoller <chipzoller@gmail.com>

* updates for disallow-host-ports-range

Signed-off-by: chipzoller <chipzoller@gmail.com>

* update description to disallow-cri-sock-mount

Signed-off-by: chipzoller <chipzoller@gmail.com>

* modify description of apply-pss-restricted-profile

Signed-off-by: chipzoller <chipzoller@gmail.com>

* rename to prevent-bare-pods

Signed-off-by: chipzoller <chipzoller@gmail.com>

* revert to chainsaw 0.1.0

Signed-off-by: chipzoller <chipzoller@gmail.com>

* move

Signed-off-by: chipzoller <chipzoller@gmail.com>

* fix deletion

Signed-off-by: chipzoller <chipzoller@gmail.com>

* fix description and AH metadata

Signed-off-by: chipzoller <chipzoller@gmail.com>

* try fix

Signed-off-by: chipzoller <chipzoller@gmail.com>

* extra spaces

Signed-off-by: chipzoller <chipzoller@gmail.com>

* fix digests

Signed-off-by: chipzoller <chipzoller@gmail.com>

---------

Signed-off-by: chipzoller <chipzoller@gmail.com>

--- a/other/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
+++ b/other/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
@@ -11,7 +11,7 @@ spec:
         file: ns.yaml
     - script:
         content: |
-          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../prevent-naked-pods.yaml | kubectl create -f -
+          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../prevent-bare-pods.yaml | kubectl create -f -
     - assert:
         file: chainsaw-step-01-assert-1.yaml
   - name: step-02
@@ -40,7 +40,7 @@ spec:
         ref:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
-          name: prevent-naked-pods
+          name: prevent-bare-pods
     - command:
         args:
         - delete
