--- a/other/prevent-bare-pods/prevent-bare-pods.yaml
+++ b/other/prevent-bare-pods/prevent-bare-pods.yaml
@@ -1,9 +1,9 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: prevent-naked-pods
+  name: prevent-bare-pods
   annotations:
-    policies.kyverno.io/title: Prevent Naked Pods
+    policies.kyverno.io/title: Prevent Bare Pods
     pod-policies.kyverno.io/autogen-controllers: none
     policies.kyverno.io/category: Other, EKS Best Practices
     policies.kyverno.io/severity: medium
@@ -14,13 +14,13 @@ metadata:
     policies.kyverno.io/description: >-
       Pods not created by workload controllers such as Deployments
       have no self-healing or scaling abilities and are unsuitable for production.
-      This policy prevents such "naked" Pods from being created unless they originate
+      This policy prevents such "bare" Pods from being created unless they originate
       from a higher-level workload controller of some sort.
 spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: naked-pods
+  - name: bare-pods
     match:
       any:
       - resources:
@@ -32,7 +32,7 @@ spec:
         operator: NotEquals
         value: DELETE
     validate:
-      message: "Naked Pods are not allowed. They must be created by Pod controllers."
+      message: "Bare Pods are not allowed. They must be created by Pod controllers."
       deny:
         conditions:
           any:
