--- a/pod-security-cel/restricted/restrict-volume-types/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/restricted/restrict-volume-types/.kyverno-test/kyverno-test.yaml
@@ -1,14 +1,14 @@
 apiVersion: cli.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  name: restrict-seccomp-strict
+  name: restrict-volume-types
 policies:
-- restrict-seccomp-strict.yaml
+- ../restrict-volume-types.yaml
 resources:
-- ../../../pod-security/restricted/restrict-seccomp-strict/resource.yaml
+- ../../../../pod-security/restricted/restrict-volume-types/.kyverno-test/resource.yaml
 results:
 - kind: CronJob
-  policy: restrict-seccomp-strict
+  policy: restrict-volume-types
   resources:
   - badcronjob01
   - badcronjob02
@@ -17,10 +17,23 @@ results:
   - badcronjob05
   - badcronjob06
   - badcronjob07
+  - badcronjob08
+  - badcronjob09
+  - badcronjob10
+  - badcronjob11
+  - badcronjob12
+  - badcronjob13
+  - badcronjob14
+  - badcronjob15
+  - badcronjob16
+  - badcronjob17
+  - badcronjob18
+  - badcronjob19
+  - badcronjob20
   result: fail
-  rule: check-seccomp-strict
+  rule: restricted-volumes
 - kind: Deployment
-  policy: restrict-seccomp-strict
+  policy: restrict-volume-types
   resources:
   - baddeployment01
   - baddeployment02
@@ -29,10 +42,23 @@ results:
   - baddeployment05
   - baddeployment06
   - baddeployment07
+  - baddeployment08
+  - baddeployment09
+  - baddeployment10
+  - baddeployment11
+  - baddeployment12
+  - baddeployment13
+  - baddeployment14
+  - baddeployment15
+  - baddeployment16
+  - baddeployment17
+  - baddeployment18
+  - baddeployment19
+  - baddeployment20
   result: fail
-  rule: check-seccomp-strict
+  rule: restricted-volumes
 - kind: Pod
-  policy: restrict-seccomp-strict
+  policy: restrict-volume-types
   resources:
   - badpod01
   - badpod02
@@ -41,10 +67,23 @@ results:
   - badpod05
   - badpod06
   - badpod07
+  - badpod08
+  - badpod09
+  - badpod10
+  - badpod11
+  - badpod12
+  - badpod13
+  - badpod14
+  - badpod15
+  - badpod16
+  - badpod17
+  - badpod18
+  - badpod19
+  - badpod20
   result: fail
-  rule: check-seccomp-strict
+  rule: restricted-volumes
 - kind: CronJob
-  policy: restrict-seccomp-strict
+  policy: restrict-volume-types
   resources:
   - goodcronjob01
   - goodcronjob02
@@ -55,11 +94,10 @@ results:
   - goodcronjob07
   - goodcronjob08
   - goodcronjob09
-  - goodcronjob10
   result: pass
-  rule: check-seccomp-strict
+  rule: restricted-volumes
 - kind: Deployment
-  policy: restrict-seccomp-strict
+  policy: restrict-volume-types
   resources:
   - gooddeployment01
   - gooddeployment02
@@ -70,11 +108,10 @@ results:
   - gooddeployment07
   - gooddeployment08
   - gooddeployment09
-  - gooddeployment10
   result: pass
-  rule: check-seccomp-strict
+  rule: restricted-volumes
 - kind: Pod
-  policy: restrict-seccomp-strict
+  policy: restrict-volume-types
   resources:
   - goodpod01
   - goodpod02
@@ -85,6 +122,5 @@ results:
   - goodpod07
   - goodpod08
   - goodpod09
-  - goodpod10
   result: pass
-  rule: check-seccomp-strict
+  rule: restricted-volumes
