--- a/pod-security-cel/restricted/disallow-capabilities-strict/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/restricted/disallow-capabilities-strict/.kyverno-test/kyverno-test.yaml
@@ -3,9 +3,9 @@ kind: Test
 metadata:
   name: disallow-capabilities-strict
 policies:
-- disallow-capabilities-strict.yaml
+- ../disallow-capabilities-strict.yaml
 resources:
-- ../../../pod-security/restricted/disallow-capabilities-strict/resource.yaml
+- ../../../../pod-security/restricted/disallow-capabilities-strict/.kyverno-test/resource.yaml
 results:
 - kind: CronJob
   policy: disallow-capabilities-strict
