--- a/pod-security-cel/restricted/disallow-privilege-escalation/.kyverno-test/kyverno-test.yaml
+++ b/pod-security-cel/restricted/disallow-privilege-escalation/.kyverno-test/kyverno-test.yaml
@@ -1,14 +1,14 @@
 apiVersion: cli.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  name: require-run-as-non-root-user
+  name: disallow-privilege-escalation
 policies:
-- require-run-as-non-root-user.yaml
+- ../disallow-privilege-escalation.yaml
 resources:
-- ../../../pod-security/restricted/require-run-as-non-root-user/resource.yaml
+- ../../../../pod-security/restricted/disallow-privilege-escalation/.kyverno-test/resource.yaml
 results:
 - kind: CronJob
-  policy: require-run-as-non-root-user
+  policy: disallow-privilege-escalation
   resources:
   - badcronjob01
   - badcronjob02
@@ -17,9 +17,9 @@ results:
   - badcronjob05
   - badcronjob06
   result: fail
-  rule: run-as-non-root-user
+  rule: privilege-escalation
 - kind: Deployment
-  policy: require-run-as-non-root-user
+  policy: disallow-privilege-escalation
   resources:
   - baddeployment01
   - baddeployment02
@@ -28,9 +28,9 @@ results:
   - baddeployment05
   - baddeployment06
   result: fail
-  rule: run-as-non-root-user
+  rule: privilege-escalation
 - kind: Pod
-  policy: require-run-as-non-root-user
+  policy: disallow-privilege-escalation
   resources:
   - badpod01
   - badpod02
@@ -39,49 +39,34 @@ results:
   - badpod05
   - badpod06
   result: fail
-  rule: run-as-non-root-user
+  rule: privilege-escalation
 - kind: CronJob
-  policy: require-run-as-non-root-user
+  policy: disallow-privilege-escalation
   resources:
   - goodcronjob01
   - goodcronjob02
   - goodcronjob03
   - goodcronjob04
   - goodcronjob05
-  - goodcronjob06
-  - goodcronjob07
-  - goodcronjob08
-  - goodcronjob09
-  - goodcronjob10
   result: pass
-  rule: run-as-non-root-user
+  rule: privilege-escalation
 - kind: Deployment
-  policy: require-run-as-non-root-user
+  policy: disallow-privilege-escalation
   resources:
   - gooddeployment01
   - gooddeployment02
   - gooddeployment03
   - gooddeployment04
   - gooddeployment05
-  - gooddeployment06
-  - gooddeployment07
-  - gooddeployment08
-  - gooddeployment09
-  - gooddeployment10
   result: pass
-  rule: run-as-non-root-user
+  rule: privilege-escalation
 - kind: Pod
-  policy: require-run-as-non-root-user
+  policy: disallow-privilege-escalation
   resources:
   - goodpod01
   - goodpod02
   - goodpod03
   - goodpod04
   - goodpod05
-  - goodpod06
-  - goodpod07
-  - goodpod08
-  - goodpod09
-  - goodpod10
   result: pass
-  rule: run-as-non-root-user
+  rule: privilege-escalation
