--- a/pod-security-cel/restricted/restrict-seccomp-strict/.kyverno-test.yaml/kyverno-test.yaml
+++ b/pod-security-cel/restricted/restrict-seccomp-strict/.kyverno-test.yaml/kyverno-test.yaml
@@ -1,14 +1,14 @@
 apiVersion: cli.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  name: restrict-volume-types
+  name: restrict-seccomp-strict
 policies:
-- restrict-volume-types.yaml
+- ../restrict-seccomp-strict.yaml
 resources:
-- ../../../pod-security/restricted/restrict-volume-types/resource.yaml
+- ../../../../pod-security/restricted/restrict-seccomp-strict/.kyverno-test/resource.yaml
 results:
 - kind: CronJob
-  policy: restrict-volume-types
+  policy: restrict-seccomp-strict
   resources:
   - badcronjob01
   - badcronjob02
@@ -17,23 +17,10 @@ results:
   - badcronjob05
   - badcronjob06
   - badcronjob07
-  - badcronjob08
-  - badcronjob09
-  - badcronjob10
-  - badcronjob11
-  - badcronjob12
-  - badcronjob13
-  - badcronjob14
-  - badcronjob15
-  - badcronjob16
-  - badcronjob17
-  - badcronjob18
-  - badcronjob19
-  - badcronjob20
   result: fail
-  rule: restricted-volumes
+  rule: check-seccomp-strict
 - kind: Deployment
-  policy: restrict-volume-types
+  policy: restrict-seccomp-strict
   resources:
   - baddeployment01
   - baddeployment02
@@ -42,23 +29,10 @@ results:
   - baddeployment05
   - baddeployment06
   - baddeployment07
-  - baddeployment08
-  - baddeployment09
-  - baddeployment10
-  - baddeployment11
-  - baddeployment12
-  - baddeployment13
-  - baddeployment14
-  - baddeployment15
-  - baddeployment16
-  - baddeployment17
-  - baddeployment18
-  - baddeployment19
-  - baddeployment20
   result: fail
-  rule: restricted-volumes
+  rule: check-seccomp-strict
 - kind: Pod
-  policy: restrict-volume-types
+  policy: restrict-seccomp-strict
   resources:
   - badpod01
   - badpod02
@@ -67,23 +41,10 @@ results:
   - badpod05
   - badpod06
   - badpod07
-  - badpod08
-  - badpod09
-  - badpod10
-  - badpod11
-  - badpod12
-  - badpod13
-  - badpod14
-  - badpod15
-  - badpod16
-  - badpod17
-  - badpod18
-  - badpod19
-  - badpod20
   result: fail
-  rule: restricted-volumes
+  rule: check-seccomp-strict
 - kind: CronJob
-  policy: restrict-volume-types
+  policy: restrict-seccomp-strict
   resources:
   - goodcronjob01
   - goodcronjob02
@@ -94,10 +55,11 @@ results:
   - goodcronjob07
   - goodcronjob08
   - goodcronjob09
+  - goodcronjob10
   result: pass
-  rule: restricted-volumes
+  rule: check-seccomp-strict
 - kind: Deployment
-  policy: restrict-volume-types
+  policy: restrict-seccomp-strict
   resources:
   - gooddeployment01
   - gooddeployment02
@@ -108,10 +70,11 @@ results:
   - gooddeployment07
   - gooddeployment08
   - gooddeployment09
+  - gooddeployment10
   result: pass
-  rule: restricted-volumes
+  rule: check-seccomp-strict
 - kind: Pod
-  policy: restrict-volume-types
+  policy: restrict-seccomp-strict
   resources:
   - goodpod01
   - goodpod02
@@ -122,5 +85,6 @@ results:
   - goodpod07
   - goodpod08
   - goodpod09
+  - goodpod10
   result: pass
-  rule: restricted-volumes
+  rule: check-seccomp-strict
