--- a/other/enforce-readwriteonce-pod/.kyverno-test/kyverno-test.yaml
+++ b/other/enforce-readwriteonce-pod/.kyverno-test/kyverno-test.yaml
@@ -8,13 +8,13 @@ resources:
 - resource.yaml
 results:
 - kind: PersistentVolumeClaim
-  policy: enforce-readwriteonce-pod
+  policy: readwriteonce-pod
   resources:
   - badpvc
   result: fail
   rule: readwrite-pvc-single-pod
 - kind: PersistentVolumeClaim
-  policy: enforce-readwriteonce-pod
+  policy: readwriteonce-pod
   resources:
   - goodpvc
   result: pass
