--- a/other/enforce-readwriteonce-pod/.kyverno-test/kyverno-test.yaml
+++ b/other/enforce-readwriteonce-pod/.kyverno-test/kyverno-test.yaml
@@ -3,7 +3,7 @@ kind: Test
 metadata:
   name: enforce-readwriteonce-pod
 policies:
-- ../enforce-readwriteonce-pod.yml
+- ../enforce-readwriteonce-pod.yaml
 resources:
 - resource.yaml
 results:
