--- a/other/enforce-readwriteonce-pod/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+++ b/other/enforce-readwriteonce-pod/.chainsaw-test/chainsaw-step-01-assert-1.yaml
@@ -1,6 +1,6 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: enforce-readwriteonce-pod
+  name: readwriteonce-pod
 status:
   ready: true
